--- a/client/src/app/views/login/login.scss
+++ b/client/src/app/views/login/login.scss
@@ -26,6 +26,15 @@
     flex-direction: column;
     gap: 10px;
   }
+  
+  &__toregister{
+    color: blue; 
+    text-decoration: underline;
+    font-family: "Bebas Neue";
+    font-size: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+  }
 
   &__input {
     margin-top: 20px;
