--- a/admin/src/app/views/page404/page404.scss
+++ b/admin/src/app/views/page404/page404.scss
@@ -1,4 +1,7 @@
+
+@import "../../../../../client/src/style/myColors.scss";
 .page404 {
+    background: linear-gradient(130deg, rgb(91, 189, 238), rgb(179, 208, 222));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,15 +11,19 @@
   
     h1 {
       font-size: 2rem;
-      margin-bottom: 1rem;
+      margin-bottom: 1rem;    
+      color: $primary-color;
+      font-size: 80px;
     }
   
     p {
-      font-size: 1.2rem;
+        font-size: 30px;
+        font-weight: bold;
   
       a {
-        color: #007bff;
+        color:blue;
         text-decoration: none;
+        font-size: 40px;
   
         &:hover {
           text-decoration: underline;
