--- a/client/src/app/views/hotelsList/list.scss
+++ b/client/src/app/views/hotelsList/list.scss
@@ -87,7 +87,7 @@
     }
   }
 
-  &__button {
+  &__button, &__button--home {
     display: block;
     width: 100%;
     padding: 10px;
@@ -104,6 +104,13 @@
       background-color: $primary-color;
     }
   }
+
+  &__button--home {
+    margin: auto;
+    width: 150px;
+    margin-top: 15px;
+    height: 45px;
+  }  
 }
 
 .list-result {
@@ -116,9 +123,3 @@
   }
 }
 
-.home__btn{
-  margin: auto;
-  width: 150px;
-  margin-top: 15px;
-  height: 45px;
-}
